💄 fix(button): z-index

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -15,6 +15,7 @@
 	font-family: $main-font-family;
 	background-color: var(--light-color-40);
 	cursor: pointer;
+	z-index: 100;
 
 	&:hover {
 		background-color: var(--light-color-80);
